# flask_searching_codes

./: .gitignore  README.md  all_codes.sql  export_codes.py  main.py  pyproject.toml  requirements.txt
web_app/static/: all_codes.csv
web_app/static/css/: style.css
web_app/templates/: base.html  index.html
