[project]
name = "my-flask"
version = "0.1.0"
description = ""
authors = [
    {name = "oleh.koval",email = "oleh.koval@nszu.gov.ua"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-wtf (>=1.3.0,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
